<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/violet5"
        android:orientation="vertical"
        tools:context=".presentation.auth.MypageUserInfoFragment"
        >

        <LinearLayout
            android:id="@+id/bg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/toolbar_under_stroke">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_btn_toolbar"
                android:padding="18dp"
                android:src="@drawable/ic_back"/>

            <TextView
                android:id="@+id/tb_title"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/violet1"
                android:fontFamily="@font/nsr_b"
                android:textSize="18sp"
                android:text="@string/title_user_info"
                android:maxLines="1"
                android:paddingHorizontal="12dp"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_menu"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/menu_btn_toolbar"
                android:padding="18dp"
                android:src="@drawable/ic_menu"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_my_page_profile_img"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>
            
            <ImageView
                android:id="@+id/iv_my_page_modify_img"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:src="@drawable/ic_camera"
                android:layout_gravity="center"
                android:background="@color/violet3"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_my_page_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/nsr_eb"
                    android:text="김차돌돌돌"
                    android:textSize="23sp" />

                <ImageView
                    android:id="@+id/iv_my_page_modify_nickname"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_pencil" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_my_page_profile_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:text="차돌이 귀여워요"
                android:fontFamily="@font/nsr_r"
                android:textSize="18sp"/>
            
            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="내 프로필"
                    android:fontFamily="@font/nsr_eb"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@drawable/ic_my_page"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="8dp"
                        android:text="김차돌"
                        android:fontFamily="@font/nsr_r"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="16dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/ic_message"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="8dp"
                        android:text="chadol@naver.com"
                        android:fontFamily="@font/nsr_r"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="로그아웃"
                        android:fontFamily="@font/nsr_r"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="|"
                        android:fontFamily="@font/nsr_r"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="회원탈퇴"
                        android:fontFamily="@font/nsr_r"
                        android:textSize="14sp"/>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="Logout" />




    </LinearLayout>
</layout>